--- a/platformio.ini
+++ b/platformio.ini
@@ -25,5 +25,11 @@ board = esp32dev
 framework = arduino
 lib_deps = 
 	${common.lib_deps_ext}
+[env:esp32s3box]
+platform = espressif32
+board = esp32s3box
+framework = arduino
+lib_deps = 
+	${common.lib_deps_ext}
 build_flags =
     -D CORE_DEBUG_LEVEL=0
